# S3-Transfer

./: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.react-router/types/: +routes.ts
.react-router/types/src/routes/+types/: home.ts  setting.ts  sidebar.ts  transfer.ts
app/routes/: home.tsx
src/: app.css  root.tsx  routes.ts  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  upload_file.rs  upload_file_multipart.rs  utils.rs
src/api/: cognitoApi.ts  s3Api.ts  utils.ts
src/components/: ActionButtonsGroup.tsx  ContentTable.tsx  FolderBar.tsx  LoadingScreen.tsx  LoginForm.tsx  SidebarNavLink.tsx  TransferSidebarButton.tsx  TransferStatusTable.tsx
src/components/navSetting/: CognitoSetting.tsx  TransferSetting.tsx
src/features/: appSlice.ts  authSlice.ts  s3Slice.ts  settingSlice.ts  transferSlice.ts
src/hook/: useTauriEventEffect.ts
src/lib/: utils.ts
src/routes/: home.tsx  login.tsx  setting.tsx  sidebar.tsx  transfer.tsx
src/types/: cognito.ts  tauriEvent.ts
